--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+margin: 0;
+padding: 0;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -21,7 +26,7 @@ header {
   color: #fff;
 }
 
-.logo h1 {
+.logo a {
   height: 24px;
   padding-left: 24px;
   align-items: center;
