updated index.html and style.css file

--- a/style.css
+++ b/style.css
@@ -137,3 +137,388 @@ header {
   bottom: 0.36%;
   overflow: hidden;
 }
+
+.grid {
+  width: 375px;
+
+  background: #fff;
+}
+
+.card-content {
+  display: grid;
+  place-items: center;
+
+  width: 375px;
+}
+
+.card-header {
+  width: 327px;
+  text-align: center;
+  padding: 24px 0px;
+  font-size: 26px;
+  font-family: "Crete Round";
+  font-style: normal;
+  font-weight: 400;
+
+  line-height: 52px;
+
+  color: #1c1a19;
+}
+.card-img {
+  width: 327px;
+  top: 107px;
+  margin-bottom: 107px;
+}
+.card-main-img {
+  width: 327px;
+  margin-bottom: 24px;
+}
+.card-subtitle {
+  margin: 0 auto;
+  text-align: center;
+  width: 327px;
+  height: 36px;
+  margin-bottom: 12px;
+  font-size: 22px;
+  font-family: "Crete Round";
+  font-style: normal;
+  font-weight: 400;
+  margin-bottom: 24px;
+  line-height: 44px;
+
+  color: #091e42;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.card-text {
+  width: 327px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #091e42;
+
+  flex: none;
+
+  order: 0;
+
+  flex-grow: 0;
+}
+.card-buttons {
+  margin-bottom: 12px;
+}
+.card-buttons ul {
+  margin-left: 12px;
+  width: 327px;
+  display: flex;
+  list-style: none;
+  padding-top: 22px;
+}
+.card-buttons ul li a {
+  margin-left: 12px;
+  text-decoration: none;
+  padding: 10px 12px;
+
+  color: #091e42;
+
+  background: #ffffff;
+
+  border: 1px solid #8993a4;
+
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+.card-last-button {
+  padding: 12px;
+
+  width: 327px;
+  text-align: center;
+
+  /* Theme 3 / Primary 1 */
+  background: #ff6b00;
+
+  /* Inside auto layout */
+}
+.card-last-button a {
+  padding: 24px 12px 12px 12px;
+
+  margin-bottom: 22px;
+  text-decoration: none;
+  color: #fff;
+}
+
+/* professional part */
+.card2 {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  width: 375px;
+  background: linear-gradient(
+      180.45deg,
+      rgba(38, 38, 38, 0) 0.75%,
+      rgba(38, 38, 38, 0.9) 61.94%
+    ),
+    url(img/Img\ Placeholder55.png);
+}
+.card-title {
+  margin-top: 84px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 295px;
+  height: 81px;
+  text-align: center;
+  font-family: "Crete Round";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+
+  /* or 138% */
+
+  /* Neutrals/N0 */
+  color: #fff;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.card-pro-text {
+  color: #fff;
+  align-items: center;
+  width: 295px;
+  margin-left: 10px;
+}
+.card-pro-buttons ul {
+  margin-left: 12px;
+  width: 327px;
+  display: flex;
+  list-style: none;
+  padding-top: 22px;
+}
+.card-pro-buttons ul li a {
+  margin-left: 12px;
+  text-decoration: none;
+  padding: 10px 12px;
+
+  background: rgba(255, 255, 255, 0.24);
+
+  border: 1px solid #8993a4;
+
+  color: #fff;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.card-last-button {
+  color: #fff;
+}
+/* === about part start === */
+.card-3 {
+  margin-top: 120px;
+  padding-top: 120px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 375px;
+  background: #1c1a19;
+}
+
+.card-about-title {
+  width: 327px;
+  margin-bottom: 24px;
+  text-align: center;
+  margin-left: 20px;
+  font-family: "Crete Round";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 88px;
+
+  /* or 122% */
+  letter-spacing: 0.37px;
+
+  /* Theme 3 / Primary 1 */
+  color: #ff6b00;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.card-about-text {
+  width: 327px;
+  margin-left: 18px;
+  margin-bottom: 12px;
+  text-align: center;
+
+  /* Theme 3 / Body Reguler 2 */
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  /* or 150% */
+
+  /* Neutrals/N20 */
+  color: #f4f5f7;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+.card-about-button {
+  margin-left: 23px;
+  padding: 12px;
+  margin-bottom: 100px;
+  gap: 10px;
+
+  width: 161px;
+
+  /* Theme 3 / Primary 1 */
+  background: #ff6b00;
+  color: #fff;
+  /* Inside auto layout */
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+.about-img {
+  color: white;
+}
+/* == skill part start ==*/
+.skill {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 327px;
+  order: 2;
+}
+.skill-img {
+  color: #fff;
+  padding-left: 24px;
+  align-items: center;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+}
+.sn {
+  padding-left: 38px;
+}
+.skillname {
+  list-style: none;
+  padding-bottom: 20px;
+  text-align: center;
+}
+.skillname a {
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 43px;
+
+  /* or 194% */
+  display: flex;
+
+  text-align: center;
+}
+/* === contact area start ==== */
+.card4 {
+  display: flex;
+  place-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 327px;
+}
+.contact-text-card {
+  margin-left: 50px;
+  width: 327px;
+  height: 216px;
+  margin-top: 100px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+
+  /* or 138% */
+  text-align: center;
+
+  /* Neutrals/N800 */
+  color: #172b4d;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.contact-field-card {
+  width: 327px;
+  height: 200px;
+  margin-left: 47px;
+  /* Theme 3 / Neutral 10 */
+  background: #fff;
+}
+
+.input-field {
+  width: 320px;
+  height: 71px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  background: #fff;
+  border: none;
+  border-bottom: 1px solid rgb(218, 203, 203);
+}
+.input-textarea {
+  width: 320px;
+  height: 120px;
+  background: #fbf8f7;
+  border: none;
+}
+.contact-button-card {
+  margin-bottom: 120px;
+  margin-top: 200px;
+  margin-left: 28px;
+  width: 107px;
+  height: 24px;
+  padding: 12px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  background: #ff6b00;
+
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.contact-button-card a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer-social-media {
+
+}
+.footer-media-links {
+  
+}
