--- a/style.css
+++ b/style.css
@@ -334,10 +334,10 @@ header {
   margin-left: 18px;
   margin-bottom: 12px;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'sans-serif';
   font-style: normal;
   font-weight: lighter;
-  font-size: 25px;
+  font-size: 21px;
   line-height: 24px;
   color: #f4f5f7;
   flex: none;
