--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ header {
   display: flex;
   list-style: none;
   padding-top: 22px;
+  color: #fff;
 }
 
 .card-last-button a {
@@ -244,6 +245,19 @@ header {
   padding-left: 14px;
 }
 
+.skillname a {
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 43px;
+  display: flex;
+  text-align: center;
+}
+
 .card-buttons ul li a {
   margin-left: 12px;
   text-decoration: none;
@@ -261,20 +275,19 @@ header {
   width: 350px;
   text-align: center;
   background: #ff6b00;
+  color: #fff;
 }
 
-/* professional part */
 .card2 {
   display: flex;
   flex-direction: column;
   place-items: center;
   width: 375px;
-  background: 
-  linear-gradient(
-    180.45deg,
-    rgba(38, 38, 38, 0) 0.75%,
-    rgba(38, 38, 38, 0.9) 61.94%
-  ),
+  background: linear-gradient(
+      180.45deg,
+      rgba(38, 38, 38, 0) 0.75%,
+      rgba(38, 38, 38, 0.9) 61.94%
+    ),
     url(img/Img\ Placeholder55.png);
 }
 
@@ -285,7 +298,7 @@ header {
   width: 295px;
   height: 81px;
   text-align: center;
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -309,19 +322,6 @@ header {
   display: flex;
   list-style: none;
   padding-top: 22px;
-}
-
-.skillname a {
-  color: #fff;
-  text-decoration: none;
-  text-align: center;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 43px;
-  display: flex;
-  text-align: center;
 }
 
 .card-pro-buttons ul li a {
@@ -349,9 +349,8 @@ header {
 .card-about-title {
   width: 327px;
   margin-bottom: 24px;
-  text-align: center;
   margin-left: 20px;
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 72px;
@@ -367,8 +366,7 @@ header {
   width: 327px;
   margin-left: 18px;
   margin-bottom: 12px;
-  text-align: center;
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: lighter;
   font-size: 21px;
@@ -383,7 +381,6 @@ header {
   color: white;
 }
 
-/*==skill partstart==*/
 .skill {
   display: flex;
   flex-direction: column;
@@ -397,7 +394,7 @@ header {
   color: #fff;
   padding-left: 24px;
   align-items: center;
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -414,7 +411,6 @@ header {
   text-align: center;
 }
 
-/* === contact area start ==== */
 .card4 {
   display: flex;
   place-items: center;
@@ -429,7 +425,7 @@ header {
   width: 327px;
   height: 216px;
   margin-top: 100px;
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -471,7 +467,7 @@ header {
   width: 127px;
   height: 24px;
   padding: 12px;
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -497,4 +493,9 @@ header {
   width: 327px;
   list-style: none;
   padding-right: 30px;
+}
+
+.footer-img-last {
+  width: 375px;
+  text-align: center;
 }
