--- a/style.css
+++ b/style.css
@@ -249,13 +249,12 @@ header {
   color: #fff;
   text-decoration: none;
   text-align: center;
-  font-family: "Inter";
+  font-family: 'Crete Round', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   line-height: 43px;
   display: flex;
-  text-align: center;
 }
 
 .card-buttons ul li a {
@@ -284,11 +283,11 @@ header {
   place-items: center;
   width: 375px;
   background: linear-gradient(
-      180.45deg,
-      rgba(38, 38, 38, 0) 0.75%,
-      rgba(38, 38, 38, 0.9) 61.94%
+          180.45deg,
+          rgba(38, 38, 38, 0) 0.75%,
+          rgba(38, 38, 38, 0.9) 61.94%
     ),
-    url(img/Img\ Placeholder55.png);
+      url(img/Img\ Placeholder55.png);
 }
 
 .card-title {
