--- a/style.css
+++ b/style.css
@@ -282,10 +282,11 @@ header {
   flex-direction: column;
   place-items: center;
   width: 375px;
-  background: linear-gradient(
-          180.45deg,
-          rgba(38, 38, 38, 0) 0.75%,
-          rgba(38, 38, 38, 0.9) 61.94%
+  background:
+   linear-gradient(
+      180.45deg,
+      rgba(38, 38, 38, 0) 0.75%,
+      rgba(38, 38, 38, 0.9) 61.94%
     ),
       url(img/Img\ Placeholder55.png);
 }
