--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ header {
 }
 
 .card-main-img {
+  margin-top: 25px;
   width: 327px;
   height: 237px;
   background-image: url(img/Img\ Placeholder88.png);
@@ -296,7 +297,7 @@ header {
   width: 170px;
   background-image: url(img/About.png);
   background-size: 100%;
-  color:#ff6b00;
+  color: #ff6b00;
   background-repeat: no-repeat;
   background-position: center;
   align-self: flex-end;
@@ -306,14 +307,14 @@ header {
   width: 327px;
   height: 1px;
   background-image: url(img/pro5.png);
-  background-color:rgb(208, 204, 204);
+  background-color: rgb(208, 204, 204);
   margin-bottom: 30px;
 }
 
 .card-buttons ul li a {
   text-decoration: none;
   padding: 10px 0;
-  color:#091e42;
+  color: #091e42;
   background: #fff;
   border: 1px solid #8993a4;
   flex: none;
@@ -338,11 +339,12 @@ header {
   flex-wrap: wrap;
   align-items: center;
   width: 327px;
-  background: linear-gradient(
-      180.45deg,
-      rgba(38, 38, 38, 0) 0.75%,
-      rgba(38, 38, 38, 0.9) 61.94%
-    ),
+  background: 
+  linear-gradient(
+    180.45deg,
+    rgba(38, 38, 38, 0) 0.75%,
+    rgba(38, 38, 38, 0.9) 61.94%
+  ),
     url(img/Img\ Placeholder55.png);
 }
 
@@ -387,7 +389,7 @@ header {
 .card-pro-buttons ul li a {
   text-decoration: none;
   padding: 10px 12px;
-  background:rgba(255, 255, 255, 0.24);
+  background: rgba(255, 255, 255, 0.24);
   border: 1px solid #8993a4;
   color: #fff;
   flex: none;
@@ -448,6 +450,7 @@ header {
 }
 
 .skill {
+  margin-top: 107px;
   display: grid;
   place-items: center;
   width: 327px;
@@ -509,7 +512,6 @@ header {
 .contact-field-card {
   width: 327px;
   height: 200px;
-
   background: #fff;
 }
 
@@ -555,7 +557,6 @@ header {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  margin: 0 auto;
 }
 
 .footer-social-media {
