--- a/style.css
+++ b/style.css
@@ -339,11 +339,12 @@ header {
   flex-wrap: wrap;
   align-items: center;
   width: 327px;
-  background: linear-gradient(
-      180.45deg,
-      rgba(38, 38, 38, 0) 0.75%,
-      rgba(38, 38, 38, 0.9) 61.94%
-    ),
+  background:
+  linear-gradient(
+    180.45deg,
+    rgba(38, 38, 38, 0) 0.75%,
+    rgba(38, 38, 38, 0.9) 61.94%
+  ),
     url(img/Img\ Placeholder55.png);
 }
 
